2017-03-15  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/conffile.c: Correctly initialize the visible property
	  field
	* installcheck/Amanda_Config.pl: Check visible field

2017-03-14  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/conffile.c: Parse hidden|visible on dumptype property
	* common-src/conffile.h (property_t) : Add visible field
	* man/xml-source/amanda.conf.5.xml: Document the new hidden|visible
	  keyword
	* perl/Amanda/Config.swg: Add the visible field
	* perl/amglue/ghashtable.c: Add the visible field
	* server-src/diskfile.c: Do not add hidden dumptype property to the
	  xml string

2017-03-14  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/ambackupd.pl: Do incremental backup

2017-03-14  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Cleanup.pm: Improvement

2017-03-10  Jean-Louis Martineau <JMartineau@carbonite.com>
	* recover-src/extract_list.c: Check result of fcntl

2017-03-10  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/bsd-security.c: Add bsd_stream_pause and bsd_stream_resume
	* common-src/bsdtcp-security.c, common-src/bsdudp-security.c,
	  common-src/krb5-security.c, common-src/local-security.c,
	  common-src/rsh-security.c, common-src/ssh-security.c,
	  common-src/ssl-security.c: Add tcpm_stream_pause and
	  tcpm_stream_resume to declaration
	* common-src/security-util.c (tcpm_stream_pause, tcpm_stream_resume):
	  Add function
	* common-src/security-util.h (tcpm_stream_pause, tcpm_stream_resume):
	  Add prototype
	* common-src/security.h (security_stream_pause,
	  security_stream_resume): Add macro
	* recover-src/extract_list.c (read_amidxtaped_data): Call
	  security_stream_pause if can't write to the pipe, add a EV_WRITEFD
	  to call write_data_to_app
	* recover-src/extract_list.c (write_data_to_app): New function that
	  write data to the pipe if allowed, call security_stream_resume
	  when the block is completely written
